# paver

./: .gitignore  .pave.toml  .paver.toml  Cargo.toml  README.md
.github/workflows/: docs.yml  pages.yml  release.yml
docs/: index.md  manifesto.md
docs/adrs/: 001-use-paved-framework.md  002-use-rust.md  003-dogfooding-pave.md  003-dogfooding-paver.md
docs/components/: code-mapping.md  configuration.md  pave-cli.md  paver-cli.md  prompt-generation.md  templates.md  validation-engine.md  verification.md
docs/runbooks/: add-command.md  onboard-existing-project.md  release.md  update-docs.md
docs/templates/: adr.md  component.md  runbook.md
site/: _config.yml  index.html
site/_layouts/: default.html  doc.html
site/assets/css/: style.css
site/docs/: ci-integration.md  commands.md  getting-started.md  index.md  manifesto.md  onboarding-existing-projects.md
src/: cli.rs  config.rs  lib.rs  main.rs  parser.rs  rules.rs  templates.rs  verification.rs
src/commands/: adopt.rs  build.rs  changed.rs  check.rs  config.rs  coverage.rs  coverage_changed.rs  doctor.rs  hooks.rs  index.rs  init.rs  lint.rs  migrate.rs  mod.rs  new.rs  prompt.rs  status.rs  verify.rs
templates/: adr.md  component.md  index.md  runbook.md
