[package]
name = "paver"
version = "0.1.0"
edition = "2024"
description = "PAVED documentation tool - structured docs optimized for AI agents"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
