[package]
name = "paver"
version = "0.1.0"
edition = "2024"
description = "PAVED documentation tool - structured docs optimized for AI agents"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.9"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
