[package]
name = "pave"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "PAVED documentation tool - structured docs optimized for AI agents"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.9"
chrono = "0.4"
glob = "0.3"
regex = "1"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }

[dev-dependencies]
tempfile = "3"
